2008-06-17  Esteban Sanchez  <estebans@artica.es>

	* pandoradb.sql: Drop foreign key of inexistent column.

	* godmode/reporting/reporting_builder.php: Fixed order when deleting a
	report content. Deleted id_agent reference from treport (local
	inconsistence is the reason why I couldn't see it before), also
	id_user insertion was failing. Added a link to view group on report
	form. Added module column on report content list. Use id_user from
	config object.

2008-06-17  Ramon Novoa  <rnovoa@artica.es>

	* pandora_console/operation/agentes/networkmap.php: Added to
	repository. Network Map.

	* pandora_console/operation/menu.php: Added an entry for Network Map.

	* pandora_console/images/networkmap
	  pandora_console/images/networkmap/0.png
	  pandora_console/images/networkmap/router.png
	  pandora_console/images/networkmap/10.png
	  pandora_console/images/networkmap/1.png
	  pandora_console/images/networkmap/2.png
	  pandora_console/images/networkmap/11.png
	  pandora_console/images/networkmap/printer.png
	  pandora_console/images/networkmap/firewall.png
	  pandora_console/images/networkmap/server.png
	  pandora_console/images/networkmap/9.png
	  pandora_console/images/networkmap/pandora_node.png
	  pandora_console/images/networkmap/server_hpux.png: Added to
	  repository. Network Map icons.

2008-06-17  Esteban Sanchez  <estebans@artica.es>

	* godmode/reporting/reporting_builder.php: Changing the group of a
	report is not allowed. It will imply removing all the report contents
	that belongs to an agent of the group. Fixed an error on javascript
	changing the group.

2008-06-17  Esteban Sanchez  <estebans@artica.es>

	* ajax.php: Added to repository. AJAX interface for Pandora. A new
	time is coming...

	* pandoradb.sql: Added id_group to treport. A report is now assigned
	to a group of agents. Changes in treport_content to add an order
	field, drop sla fields and use an enum for the type. NOTE: This will
	break all your current defined reports, update under your